Add two more datasets

--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
@@ -6,5 +6,8 @@ contexts:
 - utm_zone: 33N
   relative_orbit: 22
 - utm_zone: 33N
+  relative_orbit: 44
+- utm_zone: 33N
+  relative_orbit: 95  
+- utm_zone: 33N
   relative_orbit: 117
-
