Trivial code style

--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
@@ -2,7 +2,11 @@ contexts:
 - utm_zone: 32N
   relative_orbit: 15
 - utm_zone: 32N
+  relative_orbit: 44
+- utm_zone: 32N
   relative_orbit: 117
+- utm_zone: 32N
+  relative_orbit: 124
 - utm_zone: 33N
   relative_orbit: 22
 - utm_zone: 33N
