--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,8 +5,8 @@ repos:
   - id: trailing-whitespace
   - id: end-of-file-fixer
   - id: check-json
-#  - id: check-yaml
-    exclude: GLO-30-UTM-{{cookiecutter.utm_zone}}/
+  - id: check-yaml
+    exclude: (GLO-30-UTM-{{cookiecutter.utm_zone}}/|IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/)
   - id: check-added-large-files
   - id: check-merge-conflict
   - id: mixed-line-ending
