--- a/catalogue/era5/reanalysis-era5-single-levels/ingestion/second-ingestion-step.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/ingestion/second-ingestion-step.yaml
@@ -13,6 +13,5 @@ steps:
     filename_or_obj: s3://edc-intermediate/reanalysis-era5-single-levels-v0.zarr
   chunks: {latitude: 64, longitude: 64, valid_time: 4320}
   robust_to_zarr_kwargs: {restart_dim: valid_time, restart_block_size: 32, retries: 3}
-  to_zarr_kwargs: {
-    store: s3://edc-era5/reanalysis-era5-single-levels-v0-dev.zarr,
-  }
+  to_zarr_kwargs:
+    store: s3://edc-era5/reanalysis-era5-single-levels-v0-dev.zarr
