Add more datasets

--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
@@ -6,6 +6,8 @@ contexts:
 - utm_zone: 32N
   relative_orbit: 117
 - utm_zone: 32N
+  relative_orbit: 168
+- utm_zone: 32N
   relative_orbit: 124
 - utm_zone: 33N
   relative_orbit: 22
@@ -15,3 +17,5 @@ contexts:
   relative_orbit: 95
 - utm_zone: 33N
   relative_orbit: 117
+- utm_zone: 33N
+  relative_orbit: 124
