--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-22/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-22/__item__.yaml
@@ -27,6 +27,11 @@ properties:
       extent:
       - '2024-01-12T00:00:00Z'
       - '2024-12-25T00:00:00Z'
+    polarization:
+      type: polarization
+      values:
+      - VV
+      - VH
     y:
       type: spatial
       axis: y
