--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
@@ -27,6 +27,11 @@ properties:
       extent:
       - '2024-01-11T00:00:00Z'
       - '2024-12-24T00:00:00Z'
+    polarization:
+      type: polarization
+      values:
+      - VV
+      - VH
     y:
       type: spatial
       axis: y
