--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/contexts.yaml
@@ -4,6 +4,10 @@ contexts:
 - utm_zone: 32N
   relative_orbit: 44
 - utm_zone: 32N
+  relative_orbit: 88
+- utm_zone: 32N
+  relative_orbit: 95
+- utm_zone: 32N
   relative_orbit: 117
 - utm_zone: 32N
   relative_orbit: 168
