--- a/catalogue/era5/reanalysis-era5-pressure-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-pressure-levels/__item__.yaml
@@ -25,9 +25,9 @@ properties:
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
     ocean-wave and land surface quantities
   dc:title: ERA5 hourly data on pressure levels
-  datetime: '2023-12-31T23:00:00Z'
+  datetime: '2024-11-30T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2023-12-31T23:00:00Z'
+  end_datetime: '2024-11-30T23:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -42,8 +42,9 @@ properties:
       type: temporal
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2023-11-30T23:00:00Z'
+      - '2024-11-30T23:00:00Z'
       step: PT1H
+      axis: t
     latitude:
       type: spatial
       axis: y
@@ -60,7 +61,7 @@ properties:
       - 359.8
       reference_system: 4326
       step: 0.25
-  dc:extent: 929.6 TB
+  dc:extent: 939.8 TB
   cube:variables:
     cc:
       dimensions:
