--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -25,9 +25,9 @@ properties:
   dc:abstract: Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric,
     ocean-wave and land surface quantities
   dc:title: ERA5 hourly data on single levels
-  datetime: '2024-10-31T23:00:00Z'
+  datetime: '2024-12-31T23:00:00Z'
   start_datetime: '1940-01-01T00:00:00Z'
-  end_datetime: '2024-10-31T23:00:00Z'
+  end_datetime: '2024-12-31T23:00:00Z'
   dc:access_rights: unrestricted
   dc:subject:
   - ERA5
@@ -43,7 +43,7 @@ properties:
       axis: t
       extent:
       - '1940-01-01T00:00:00Z'
-      - '2024-10-31T23:00:00Z'
+      - '2024-12-31T23:00:00Z'
       step: PT1H
     latitude:
       type: spatial
@@ -61,7 +61,7 @@ properties:
       - 359.8
       reference_system: 4326
       step: 0.25
-  dc:extent: 256.3 TB
+  dc:extent: 340.4 TB
   cube:variables:
     alnid:
       dimensions:
@@ -727,3 +727,219 @@ properties:
       type: data
       description: Geopotential
       unit: m**2 s**-2
+    asn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow albedo
+      unit: (0 - 1)
+    csf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Convective snowfall
+      unit: m of water equivalent
+    csfr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Convective snowfall rate water equivalent
+      unit: kg m**-2 s**-1
+    cvh:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: High vegetation cover
+      unit: (0 - 1)
+    cvl:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Low vegetation cover
+      unit: (0 - 1)
+    es:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow evaporation
+      unit: m of water equivalent
+    lai_hv:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Leaf area index, high vegetation
+      unit: m**2 m**-2
+    lai_lv:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Leaf area index, low vegetation
+      unit: m**2 m**-2
+    lsf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Large-scale snowfall
+      unit: m of water equivalent
+    lssfr:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Large scale snowfall rate water equivalent
+      unit: kg m**-2 s**-1
+    rsn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow density
+      unit: kg m**-3
+    sd:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snow depth
+      unit: m of water equivalent
+    sf:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snowfall
+      unit: m of water equivalent
+    slt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil type
+      unit: (Code table 4.213)
+    smlt:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Snowmelt
+      unit: m of water equivalent
+    stl1:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil temperature level 1
+      unit: K
+    stl2:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil temperature level 2
+      unit: K
+    stl3:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil temperature level 3
+      unit: K
+    stl4:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Soil temperature level 4
+      unit: K
+    swvl1:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 1
+      unit: m**3 m**-3
+    swvl2:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 2
+      unit: m**3 m**-3
+    swvl3:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 3
+      unit: m**3 m**-3
+    swvl4:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Volumetric soil water layer 4
+      unit: m**3 m**-3
+    tcsw:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Total column snow water
+      unit: kg m**-2
+    tsn:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Temperature of snow layer
+      unit: K
+    tvh:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Type of high vegetation
+      unit: (Code table 4.234)
+    tvl:
+      dimensions:
+      - valid_time
+      - latitude
+      - longitude
+      type: data
+      description: Type of low vegetation
+      unit: (Code table 4.234)
