--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/plots.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/plots.yaml
@@ -1,10 +1,13 @@
 plots:
-- var: "gtc"
+- var: gtc
   time_dim: "date"
-  coarsen: {"x": 50, "y": 50}
+  isel:
+    date: 0
+    polarization: 0
+  coarsen: {x: 50, y: 50}
   plot_kwargs: {
     "vmax": 1,
     "vmin": 0,
-    "cmap": "greys",
-    "central_longitude": {{ (cookiecutter.utm_zone[:-1]|int + 7) // 15 * 90 - 180 }}
+    "extent": [0., 24., 36., 48.],
+    "cmap": "Greys_r"
   }
