Be sure draft data stay draft and low in the search

--- a/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
@@ -9,7 +9,7 @@ bbox:
 - 179.6
 - 90.0
 properties:
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: The high-resolution forecast is a single forecast included in the ECMWF
     medium-range forecasts. The forecast has a horizontal resolution of around 9 km
     and provides a description of a possible evolution of the weather out to 10 days
@@ -183,4 +183,4 @@ properties:
       description: Vorticity (relative)
       unit: s**-1
   dc:extent: 8 GB
-search_weight: 50
+search_weight: 0
