--- a/catalogue/eurostat/geoprocessed-eurostat-regional-economic-accounts_nama_10r_3gdp/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-regional-economic-accounts_nama_10r_3gdp/__item__.yaml
@@ -11,7 +11,7 @@ bbox:
 properties:
   start_datetime: '2000-01-01T00:00:00Z'
   end_datetime: '2021-01-01T00:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Europe EUROSTAT Gross domestic product (GDP) at current market prices
     by NUTS 3 regions from 2000 to 2022
   dc:access_rights: charges apply
