--- a/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
+++ b/catalogue/egg4/cams-global-ghg-reanalysis-egg4/__item__.yaml
@@ -11,7 +11,7 @@ bbox:
 properties:
   start_datetime: '2003-01-02T00:00:00Z'
   end_datetime: '2020-12-31T21:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: 'This dataset is part of the ECMWF Atmospheric Composition Reanalysis
     focusing on long-lived greenhouse gases: carbon dioxide (CO2) and methane (CH4)'
   dc:access_rights: unrestricted
@@ -84,4 +84,4 @@ assets:
     xarray:storage_options:
       client_kwargs:
         trust_env: true
-search_weight: 40
+search_weight: 0
