--- a/catalogue/eurostat/geoprocessed-eurostat-animal-populations-agr_r_animal/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-animal-populations-agr_r_animal/__item__.yaml
@@ -11,7 +11,7 @@ bbox:
 properties:
   start_datetime: '1977-01-01T00:00:00Z'
   end_datetime: '2023-01-01T00:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Europe EUROSTAT Animal populations by NUTS 2 regions
   dc:access_rights: charges apply
   dc:title: Europe EUROSTAT Animal populations by NUTS 2 regions
