--- a/catalogue/eurostat/geoprocessed-eurostat-employment-rates_lfst_r_erednu/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-employment-rates_lfst_r_erednu/__item__.yaml
@@ -11,7 +11,7 @@ bbox:
 properties:
   start_datetime: '1995-01-01T00:00:00Z'
   end_datetime: '2022-01-01T00:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Europe Eurostat Regional Labour Market Employment Rates by sex, age,
     educational attainment level, citizenship and degree of urbanisation
   dc:access_rights: charges apply
