--- a/catalogue/eurostat/geoprocessed-eurostat-government-deficit-surplus-gov_10dd_edpt1/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-government-deficit-surplus-gov_10dd_edpt1/__item__.yaml
@@ -11,7 +11,7 @@ bbox:
 properties:
   start_datetime: '1995-01-01T00:00:00Z'
   end_datetime: '2022-01-01T00:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Europe EUROSTAT Government deficit and debt
   dc:access_rights: charges apply
   dc:title: Europe EUROSTAT Government deficit and debt
