--- a/catalogue/eurostat/geoprocessed-eurostat-gross-domestic-expenditure-R-D-rd_e_gerdreg/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-gross-domestic-expenditure-R-D-rd_e_gerdreg/__item__.yaml
@@ -11,7 +11,7 @@ bbox:
 properties:
   start_datetime: '1980-01-01T00:00:00Z'
   end_datetime: '2022-01-01T00:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Europe EUROSTAT Gross Domestic Expenditure on Research and Development
     (GERD) by sector of performance and NUTS 2 regions
   dc:access_rights: charges apply
