--- a/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality-demo_r_mweek3/__item__.yaml
@@ -11,7 +11,7 @@ bbox:
 properties:
   start_datetime: '2000-01-03T00:00:00Z'
   end_datetime: '2023-10-30T00:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Europe Eurostat mortality data
   dc:access_rights: charges apply
   dc:title: Eurostat mortality data over Europe
