--- a/catalogue/eurostat/geoprocessed-eurostat-population-demo_r_pjanaggr3/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population-demo_r_pjanaggr3/__item__.yaml
@@ -11,7 +11,7 @@ bbox:
 properties:
   start_datetime: '1990-01-01T00:00:00Z'
   end_datetime: '2022-01-01T00:00:00Z'
-  edh:maturity: published
+  edh:maturity: draft
   dc:abstract: Europe Eurostat population data from 1990 to 2022
   dc:access_rights: charges apply
   dc:title: Eurostat population data over Europe
