--- a/catalogue/sentinel-1-ard/__collection__.yaml
+++ b/catalogue/sentinel-1-ard/__collection__.yaml
@@ -1,4 +1,4 @@
-title: Sentinel-1 ARD
+title: Sentinel-1 Analysis Ready Data
 dc:abstract:
   The Sentinel-1 Radiometrically Terrain Corrected (RTC) data 
   are Analisys Ready Data (ARD) derived from the Ground Range Detected (GRD) Level-1 
