--- a/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
+++ b/catalogue/sentinel-1-ard/templates/IW-UTM-RO-italy/IW-UTM-RO-italy-{{cookiecutter.utm_zone}}-{{cookiecutter.relative_orbit}}/__item__.yaml
@@ -13,7 +13,7 @@ properties:
   datetime: '2022-01-01T12:00:00Z'
   start_datetime: '2024-01-11T00:00:00Z'
   end_datetime: '2024-12-24T00:00:00Z'
-  dc:abstract: Sentinel-1 ARD for relative orbit {{ cookiecutter.relative_orbit }} on UTM {{ cookiecutter.utm_zone }}
+  dc:abstract: Sentinel-1 Radiometrically Terrain Corrected data derived from IW GRD products for relative orbit {{ cookiecutter.relative_orbit }} on UTM {{ cookiecutter.utm_zone }}
   dc:access_rights: unrestricted
   dc:title: Sentinel-1 ARD for relative orbit {{ cookiecutter.relative_orbit }} on UTM {{ cookiecutter.utm_zone }}
   dc:description: Sentinel-1 ARD for relative orbit {{ cookiecutter.relative_orbit }} on UTM {{ cookiecutter.utm_zone }}
