--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-168/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-168/__item__.yaml
@@ -13,7 +13,8 @@ properties:
   datetime: '2024-12-23T00:00:00Z'
   start_datetime: '2024-01-10T00:00:00Z'
   end_datetime: '2024-12-23T00:00:00Z'
-  ds:abstract: Sentinel-1 Radiometrically Terrain Corrected data derived from IW GRD products for relative orbit 168 on UTM 32N
+  dc:abstract: Sentinel-1 Radiometrically Terrain Corrected data derived from IW GRD
+    products for relative orbit 168 on UTM 32N
   dc:access_rights: unrestricted
   dc:title: Sentinel-1 ARD for relative orbit 168 on UTM 32N
   dc:description: Sentinel-1 ARD for relative orbit 168 on UTM 32N
