--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-124/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-124/__item__.yaml
@@ -13,7 +13,8 @@ properties:
   datetime: '2024-12-20T00:00:00Z'
   start_datetime: '2024-01-07T00:00:00Z'
   end_datetime: '2024-12-20T00:00:00Z'
-  ds:abstract: Sentinel-1 Radiometrically Terrain Corrected data derived from IW GRD products for relative orbit 124 on UTM 33N
+  dc:abstract: Sentinel-1 Radiometrically Terrain Corrected data derived from IW GRD
+    products for relative orbit 124 on UTM 33N
   dc:access_rights: unrestricted
   dc:title: Sentinel-1 ARD for relative orbit 124 on UTM 33N
   dc:description: Sentinel-1 ARD for relative orbit 124 on UTM 33N
