--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-95/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-32N-95/__item__.yaml
@@ -47,22 +47,29 @@ properties:
       reference_system: 32632
       step: 10.0
       extent:
-      - 200005.0
+      - 450005.0
       - 799995.0
   cube:variables:
-    gtc:
+    nrb:
       dimensions:
       - date
       - polarization
       - y
       - x
       type: data
-      description: beta nought
+      description: normalised radar backscatter
       unit: m2 m-2
-  dc:extent: 1.9 TB
+    simulation:
+      dimensions:
+      - y
+      - x
+      type: data
+      description: simulated beta nought
+      unit: m2 m-2
+  dc:extent: 1.1 TB
 assets:
   data:
-    href: https://data.earthdatahub.destine.eu/sentinel-1-ard/IW-UTM-RO-italy-v0/32N/95
+    href: https://data.earthdatahub.destine.eu/sentinel-1-ard/IW-UTM-RO-italy-v0/Z32N/O95
     roles:
     - data
     xarray:open_kwargs:
