--- a/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-51/__item__.yaml
+++ b/catalogue/sentinel-1-ard/IW-UTM-RO-italy-33N-51/__item__.yaml
@@ -10,10 +10,11 @@ bbox:
 - 48.0
 properties:
   edh:maturity: draft
-  datetime: '2022-01-01T12:00:00Z'
-  start_datetime: '2024-01-11T00:00:00Z'
-  end_datetime: '2024-12-24T00:00:00Z'
-  dc:abstract: Sentinel-1 Radiometrically Terrain Corrected data derived from IW GRD products for relative orbit 51 on UTM 33N
+  datetime: '2024-12-27T00:00:00Z'
+  start_datetime: '2024-01-02T00:00:00Z'
+  end_datetime: '2024-12-27T00:00:00Z'
+  dc:abstract: Sentinel-1 Radiometrically Terrain Corrected data derived from IW GRD
+    products for relative orbit 51 on UTM 33N
   dc:access_rights: unrestricted
   dc:title: Sentinel-1 ARD for relative orbit 51 on UTM 33N
   dc:description: Sentinel-1 ARD for relative orbit 51 on UTM 33N
@@ -25,8 +26,8 @@ properties:
       type: temporal
       axis: t
       extent:
-      - '2024-01-11T00:00:00Z'
-      - '2024-12-24T00:00:00Z'
+      - '2024-01-02T00:00:00Z'
+      - '2024-12-27T00:00:00Z'
     polarization:
       type: polarization
       values:
@@ -46,7 +47,7 @@ properties:
       reference_system: 32633
       step: 10.0
       extent:
-      - 200005.0
+      - 450005.0
       - 799995.0
   cube:variables:
     nrb:
@@ -65,7 +66,7 @@ properties:
       type: data
       description: simulated beta nought
       unit: m2 m-2
-  dc:extent: 1.2 TB
+  dc:extent: 1.1 TB
 assets:
   data:
     href: https://data.earthdatahub.destine.eu/sentinel-1-ard/IW-UTM-RO-italy-v0/Z33N/O51
