--- a/catalogue/era5/reanalysis-era5-single-levels-monthly-means/ingestion/ingestion-steps.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels-monthly-means/ingestion/ingestion-steps.yaml
@@ -60,10 +60,11 @@ steps:
         "surface_pressure"
       ]
     request_chunker_kwargs: { time_dim: valid_time }
+    client_kwargs: { key: d9d3dcf2-52bc-4410-8224-8b7592777c34, url: https://cds.climate.copernicus.eu/api }
 
   open_dataset_name: open_dataset_fix_era5_single_levels_names
   chunks: {valid_time: 120, latitude: 256, longitude: 256}
 
-  robust_to_zarr_kwargs: {restart_dim: valid_time, restart_block_size: 6}
+  robust_to_zarr_kwargs: {restart_dim: valid_time, restart_block_size: 1}
   to_zarr_kwargs:
-    store: s3://edc-era5/reanalysis-era5-single-levels-monthly-means-v0
+    store: s3://edc-era5/reanalysis-era5-single-levels-monthly-means-v0.zarr
